deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect-demo-website
spec:
  selector:
    app: connect-demo-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
